Polishing.
Include CodeQL in GitHub actions distribution.